--- a/Register_Form.css
+++ b/Register_Form.css
@@ -2,9 +2,18 @@ html, body, .form_content {
     width:100%;
     height: 100%;
 }
+.header{
+    text-align: center;
+    color: #0200ff;
+    font-size: 20px;
+    
+}
 .container{
     background-color: rgb(0 255 216);
     border: 5px solid black;
     margin: auto;
    
+}
+.button{
+    background-color: #00faff;
 }
